--- a/CapaPresentacion/frmAlumnosPorCurso.resx
+++ b/CapaPresentacion/frmAlumnosPorCurso.resx
@@ -118,6 +118,166 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnGenerarReporte.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIIAAACCCAYAAACKAxD9AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAAd0SU1FB98LEAQmNO0WvZkAACQQSURBVHhe7Z0HeFTV1oZzvfpfS1AEiQjYsKEi
+        il2u3f+q+INwRRAhgoIUARGk9yY2ihQR6SUESAgQSiAJSUgnvffee2+AhfWvb885ycxkDySBhEky+3ne
+        ZzAze87Z6/vO2mvvcxLNTK3527vvvqv8q5204uJi9fVVZhwz3UTxdCIa/8Ybb/xHBKetNx4w6M1UMGSi
+        josXL9Jbb71FnBneUcLVdhsP+Fb9AJjQoGUE8LwSsrbZeMBF2oMvKyujqqoqqq6ubvdcunRJ2wjgUSVs
+        ba+x+H+pJqisrBQmwGtFRUW7Bw0GeO+999q+GVQTYOAwgPrfJorpr7/+ogEDBtDAgQPpgw8+0DZE2zOD
+        OmiTCepz4cIF+uijj2jIkCE0ePBgYYj+/furhnhECWHbaLIAmNBw/vx5+uSTT+jTTz+lYcOGCVNoG4J5
+        WAlj62+yAJjQACNYWlrSZ599RiNHjqThw4fT0KFDazMEpg2mpxLK1t1kATChAUb44osvaMyYMfT555/r
+        GELNEIMGDaIPP/zwASWcrbfJAmCIkqIcKs2LYaLbBRfKk2jcuHE0YcIE8aptiBEjRghDfPzxx+qUcb8S
+        0tbZZILLKM2LoEvOZnTJhXG9kS653crc1qYh7xtp4qRvaPLkyfTVV18JQ3z55ZfCEKNHj641BOoIGIK5
+        Vwlr62sy0etRWkUXvZ6iv5zM6E+X2+hi4jq6GP99m4fSfqCvv55GU6dO5devaw0xfvx4HUOgjlANwVNG
+        dyW0ratJhdejqOwPuuhoTn84mNHFqBn0h9Md9McpszYPcQacNn0OffvttzRtmq4hJk6cWGsI1BHahuBV
+        RjclvK2nyYTXB0Y472BOF+zN6IJbL7pwnF/bAcRmmDFrAc2aNYtmzJhB06dPp2+++UYAQ0yaNMmgIbio
+        7KqEuHU0mfD1YCNUHzenmqNmVGN/o+a1HUAnzGj23EU0d+5cmj17dj1DwAxTpkwR04VqiLFjxwpDjBo1
+        CjXE3fyqRNrIm1R4fcr/oMqj5lRpZ9au+JPNMG/BUlqwYAHNmzfvioZQMwRWGKoheJVhwa9KtI24FRUV
+        0RUpu0jlduZUftCsXXHxkBktWLScFi1aRAsXLqT58+frGGLmzJkNMcQlLiq78KsScSNtUuH1YSOU2phT
+        qbVZu+I8m2HRku9oyZIltHjx4nqGmDNnTq0hUFACfUNgumBDXOIaogu/KlE3wiYVXh82QrG1ORXvMWtX
+        VOw1o59XzqFly5bR0qVLdQyB6cKQIdQMgVUGDIHsMGHChL/ZFF34VYm8kTWp8PqwEQr3mlPhTrN2h93a
+        wbR8xXe0fPnyRhsCS041Qyh7EH+zEbrwqxJ9I2pS4fUpv0j5u8wpf6tZu6Nwmxmt+X4OrVixQiAzBKYL
+        1RCoH2AIFJTahlCzA08Xl9gIXdgYigJG0qTC68NGyN1uTrmbzdol2Zv/SftXfUKLV6yiZSu+p2XLV9LS
+        5d/R4qUraSHXEAsWr6D5XFTOW7CMM4LGACgiYQItA4gpAgZhE13y8/PrpUhgHK2wsJCuRFHZBcreYk7Z
+        v3JQ2im5m8wo/df/odgNnSlmw12CxA0dKGmjOSVtALdR8uYulFdURbm5ubWUlpZSSUlJPTiurooExtH0
+        RZcBI2Ruuo0y1puZuAyZm24VsZLFUIKzIoFxNMkJ1qekkjJ2PEppa8xMXIaMHY+JWEljWJ9WaAQmL+Y0
+        pawwo5QfTUhZaUZ5sc7S2BmgdRqhkIvGgsw4ygs/QnkR9ia04ZggNoiRNHZyjMsIBQUFZOK6YDKCCYHJ
+        CCYEJiOYEBiXEfLz88nEdcFkhMZSXFxIoWEp5OOboIOffyIVSD7fSjAZoTEgjR6wCaZtOwJpz94Q2rk7
+        WCGIrKxDaeMmHyoqKpD2NXKMywh5eXlkzJSWFtKuPUG0YLETLVziRIuWOtcyb6Ejbd7iR84uUdK+Ro7J
+        CI0BRliw2JFNIGf5ShdydI6U9jVyTEZoDGVlRTR7ngPNX3RaytwFp0xGuBZNcoJGRVlZIc2ae4KnAQcp
+        c+afJEenCGlfI8e4jKB979wYwdQwY85xmrPgpJRZ807QaccwaV8jx2SExgAjfDvLnqeH41JmzjlGp06b
+        jHDVLScnh4yZkpICmj7zKE8Px6TMmG1PDqdCpX2NnHZuBL4asjMzKSsxsY6EBMpOTxfv6X8eRvhmxmGe
+        Ho5KmT7rCJ08FVKvXyugfRshwdaW/Pr0oWRLSx0Cnn2W4nbvrvf5UjbC1Ol2PD0ckTKNTXLSIbhev1aA
+        cRkhOzubWoqslBSKev99OmNhQa733KOD8113UerYsZQeFaXTp6Q4n6ZMs6VpM+2kTP32EJ04GaTTByDY
+        Lp6+tPvQsWvCLlt7ioiOqXecq6D9GiGTp4HI/v3JrUcPKSGvv07pISE6fWCEyd/Y8PRwSMrX023puMQI
+        GRmZtGrLXvplh/U148Cx06LQ0z+WIbJ4ukuLjKQEFxfKSkvTf78dGyEpiVy6dSNXFt0QaYGBOn1KSvJp
+        0tcHeHqwkTLlm4N07IRuH3C9jRBx5Ah5PfEExbG5QeTLL1P4zp3anzEuI2RlZVFLkcEZwRnTQPfuBkkN
+        CNDpU1ycRxOn7Ofp4aCUSVMPkP1x3T4gPT2jWYyAKUf/WPrEuLqS/9NP08mePcmKpzzrLl3oMI87ng3h
+        NmAAZbER+HPt2Ai8OjjNATnNWcEQKfWMkE8TJu/j6WG/lK++tmYj+Ov0AbjqvPyDaN9Rh2vC3iMnKT4x
+        ud5x9MngOsi+a1c6zibY1bkz7WGEGZgDXBuFc2bwf+EFys7Pd7K7+25FBSNombyUaynS2QgOHCQHNoMh
+        kv39dfoUFeXR+ElWfOVbS5k4ZR8dPean00cFV69ka7fJQGjZcVRyCgvp8Isvks8zz9C2Tp1oO5tgJ7Ob
+        2ctG2Mfs5+xwlqeMqH79Lu3v1Ml4fu1NNqCGkpudSfahabQvMFWH0xFplJNV//Pp8fF0HFcLC24ImRG+
+        nLiHBbeSMn7SXjpyVG6EliSLTee6YAFFvPIK/dqxI/3ORtiqZ4Y9bATtqQK1w6kHHtgPHQ5ZWAg9rluT
+        DaohFOZk0Xy3dNoQWUZz3bNpngL+vSm6nOY5p9QzA4xgf/fdInUaIklihLETdvP0sFfKuK/20OGj53T6
+        tDTIFGd37KCAvn1pI5sARvjtzjtrzbCNTbCD0Z8qbCwsKPbVV8m7T58sRY7r1zIyMrjCbjzOYck0+2wm
+        jbCNoZF6jLCJocXeORSTlKbTJzUujg7jamAzGCLRz0+nT2FhLn0xfieNm7RbytiJu8juiI9On5YmPDyc
+        3D086My2bbT6xhtpAxsBhtjEZtjMbNEzg/5U4dOnD0X263fxQKdOTymytHyTDawhHA1KotGHY2n4gUgp
+        n9pEU0Bcqk4fGMGWB27LV4IhZEb4/MsdPD3skjKGTWJ3+PoZIZFXQh5sAnd3d/Ly9iYfFxdaz0Jrm0E7
+        OxiqG47dey/FvvYaHeve/Ufo0uJTRXp6Oi+1Gs+RwEQaYhVGQ/fJwXsBcSk6fVJiY+kgD/wgD9wQCefO
+        6fQpKMihUWO38fSwQ8oX47fTITtvnT4tibePH/mxeQEMgdfg4GCy/ugjWtehgzBEg6YKHrstT43R//43
+        uT/+eDK0se/egn/EVTa4hnA4IIEG7w6ij/bIwXsBsck6fWAEzI0YtCHiz9U3guWYrUJwGaO/3Ea2dl46
+        fUAG4x8cSvaOrteMgJAwnWPkJXpRdcgPFBLgRSEhwRQWFiaMEBQUROEREeS2aZOYKtS6wdBUATNoZ4fA
+        Z5+lkBdeqOTseY8iU/O3tLQ0agp2/nE0cKc/DdoVIAXv+cck6fRJZiPsVQZtiDhfX50+BfnZZPn57zw9
+        bJUyeswWsjnkqdMHpKSk0k+/76G1O6yvGT/9vpsLw0zx/RmpcXQxdAVdCFpMNQHfUnLQQYqIjKaYmBhR
+        M4SGhlI0/s1Z4hdzc2ndYGiqwMVy6sEHKei554iXmC8pUjVv0w9gQ7E9F0sfbPOhAdt9peA9v2g9I3Bg
+        dnMQMGhDxPn46PTJZyOMGL2ZRo/dIuWzMb+Tja2HTh+QnJJCq7Ze251FGCsrM5NS07KoJvwXuhC8hE0w
+        g6p8J1KF50jK9V1EsQkZlJSURPG8QoqMjBSvyfzfNoMG0fo77tBkB46BobpBe6rwePJJscxUpGrelpqa
+        Sk3Bxjea3v3dg/pv8ZSC985FJ+r0SWIj7OAAICUaIpaNoN0nPy+bho/axIJvljLyi9/ogK27Th+QlJzc
+        LEbIzMymsui9iglmsQm+ogqvUVR29iMqOfMuFbgMpJSkWM30xMVkHBfIMEIGLzG9N26kNf/6l27dwMim
+        CphhH78e4rrhQJcuXRS5mq/pB7ChHPSJonc2udG7v52Vgvd8oxJ0+iRFR9NWHjh23QwRw5W3dp/8vCwa
+        bvkrWbLgMkaO3kT7bc7q9AHICkd4Xt9iffiaccz5LOUnuNHFYEwHs6n63GSq9BpN5e4fU6nL+1Ts9BoV
+        nnqW8k/0ouwoG8rJzRO/zAJT4Hzw4E28p6cww3rJVIHxq2ZAdlCniv0WFrcocjVfS+EU2hT2e0XQmxvO
+        0Dsb5eA9n4h4nT6JbARcAUiJhohmI2j3yWMjDBu5QQgu49NRv9L+g2d1+tT25cAXFRZeMwqzEzkTLKXz
+        gXPZBFPYBF+wCYZSqesHbII32ATPUf7xXmyExyj3yD2U4zOJikoviN/WUjee8vELsHl5tOuFF2hdA6YK
+        NoOjIlXzNlkAG4K1Zxi99stpenOdoxS85x0Rp9MnMSqKNilXgSGivbx0+uTlZtLHI9az4BulDP9sA1kf
+        cNPp0xwkpWbS+dAf2QTzqNrvazbBGDbBMDbB/1GxM0zwvMgEBScep7xjPSnnyN2UbWtOOadfEmOACcRK
+        g02AP1lYWFJCTnPm0Npbb73SEvNmnioUtZqxJfNc2hSsPEKp3+qT9NoaByl4zzs8VqdPAhthw+23i6vA
+        EFFsBO0+uTDCp7/Q8FEbpHxiuZ727XfV6XOtSUpJp4qILXQ+aD5V+39Dld5fUrnHcDbBADbBW1R4+kU2
+        wBNKNmAj2N9HOYc7U/ah2zXY3UkZ0ccphaeshIQE8UwDpoxsfg2ys6PVN90kXVWwGZ5UZGr+Jht4Q9h7
+        Nphe+vkY9Vsl56WfjpFXWIxOn3iuotexEVA9GyKS51DtPrk5mTTkk7VcJ6yTMmzEL2S130Wnz7UlhQpi
+        TrAJOBP4T2MTjGMTfEqlbh9SifPbVMRXfMHJ3myCR6jQ4Rl+fVhMC9mHOtYZAdjeQmlesyguPoWi+IJA
+        lsHdUWSJBC6it/buLcZfa4ZOnaYqErVMkw/+yuxxC6TnfzhML/14RAre8wyL1ukDI6xhI6zhARsiQs8I
+        OTkZ9N9ha1hwiF4fZIu9+87o9LlmoNpPCKILQQupxv9bqvIZL5aJZW6DeIXwv1Tk+Aqb4CkxFWBqQFbI
+        s3+As0EXXRMo5B97mHLOfkHhkbEUEhJCERERYmWBYyVxDWFraanuOXhBG84MQqMWaVjzNoVdrgHU9ztb
+        en7lISl4zyM4SqdPHA98FQ90FZvBENiA0e4DIwweuorrhLVShgxfw0Zw1umjkpCYSMFh4U0mNDySzoes
+        0OwV+GCvwJKXiYPZBP9hE/SjAoen2QQPiiKx0KEvZ4NHKfdodzEV6JsAWaLI8d9iVVFw4kkK9ztBfv7+
+        5OvrK6YLEMNLTec1a8h27Nib2QyKQi3UZAFsCDvP+FOfZfup7/IDUvCeu8QIP952G/3UoYNB6hkhO50G
+        ffwzX/lrpHz0ySraY+Wk00cFj6qt3mbVJH7cYk1ZXsvZBDOp6txXbILPNHsFLu8KQQt4Gsg79hC/9hHT
+        Qz5PD3n2D3KRaFHPBNl2HXlV8ab4nJg+uKjMt+9OkS4ryMPTh86ePSu2p2NjY7EruVuRpmUb7p41BTuv
+        EHp80V7qs2SflCcWW1FYdLxOn9jwcFrJRvieBZexkrNFOE8N2n2yszRGGDJ8tZT/DvtZZATtPiAuPv6q
+        NpTOnVrHK4RZbIJJVOE1mk0whE2AvYJXa6/+PK4LNCsGzbIx9+i9lGPXqZ4RkD2KRTZ4rraeyLPnz/IU
+        End8ELm7a+5eBgQEFBORGU8Zijot2PQD2FDyc7LpjZ9sqdf8XdRrwW4dHuOfDVh/lDLSUnX7cfr7rW9f
+        Wn7zzbT8llt04Z/9aGFBSdqfZ5KSEmnpdzb04ZCfeIr4uR5DeXrIz8/T6QPi4ppuBKv9O7guwIYR9go+
+        1+wVuPRXNowg+mNC9Lo6oY/IDrlHurLwd2iZoIMQvtjp9dpsUHAcy8sHuX+32pVFpt3d5Hn2dBkb4lY2
+        hKJMCzd1fmos2EOvrqqk312DafUp/1pWnfKjPV7h9Pf5avEZ/X6VNTXkvX49OS1cqIPn2rV0/s8/630e
+        VFdXkKNTME8BbrRnXx3WBzzowoXz0uPADOt27qc1nOYbA4xQHaDsFXhr7RWIDaPnlSu/O2eCN2t/pikS
+        7+dscJeWCW4Xy8iSM+8o2YA/V5sNeHmJKYSnDOWzfypyXL+GIF4NWAIpv91bCzZPMN/JPo+9dzxhrN8H
+        P8N7hvpgZ06/D5B9XqW4uIhS0tIpJT2jgWRTdfBSNgH2CsZq7RW8yUK+yHP7E5Rr34OzwMvivoIo/sSS
+        8RHOBt1Y0LolY45dZ82OozOywcuabKBsNmmygY5pWrgylDRZANsKMJD+lGGYJCqO2Km1YYS9goEs5NtU
+        iL0CrvSxNEShVyb2EN5igdkcJ59kc9RfMmIqKTnzNmcNNRs8VZsNcrHrWLeysFSkuL4NwTIRR2nRrlTj
+        P02zV+AxQtkreEdczWKvgFcEuOo1ReN7VMRFY4HDs0q90ENL2A4ie5RyxkAm0WSDvnrZoHbX0V+R4fo3
+        WVDaG/Fx0cpewQTNXoGbulegFoI9xRWPn2uyxDucJRSDqPcVRJHYQRgDNYWoDdgsRadfULIBrzK4jqjL
+        Bh2rEH82g9DhujfM5e0dYYLavYL/KvO/umH0sBC61LU/lbl/zNmgP2eD1/mq59UDX+WaJaPmCseqAXsN
+        pS5KNuBaQpMNuJgU2aC7Uht0pNiYaCdFAuNossC0J4qD1+rtFXDad1T2Co5pikAUesgUpWK6UDKFQx+x
+        ZVx3X+EOMZ2gQMSysjYb4HO12YCXl5wNEv134tjG9buPeMauvZIWcYqq2QSavQI8XKLsFYgNI8z93UUq
+        1ywj8dwBbjljBfGCsoK4n7JRJNqai+IRRWQpG6lEZINX+HOabJCPPQYlG6Q5fqAe37iMEB0dTe2RmOgI
+        XiZOYZHxcAn2CvBwCVK+uldwr7jKkSk09xh4ytDeXuarPAf3FTgbFLBxyjEl1NYGr2llg8dqs0HW0Yco
+        OiZOPQeTEa4/UVQjTIC9gk/qX+lH7+MU3olXD59qsoHYT6hbStbeVzhswa/3iffLXHla0MkGz3KRqGaD
+        HlxndKWo2FTt8zAuI+DeeHujLHCxslegCqw+XIK9As0OIXYNxYOpooDU3Gco4iu9AM8kiozB4nKRiGxR
+        lw1QGyAbvMjTC2eDE8gGD1AuGyY2+IT+ebQNI8DVLh7edMzRpVUR47OHKn3GKXsF2BjCXoHm4RLNVd5F
+        pHHsKWgyhuYhlGLsKfAqQLNkfEhZTg7i94dpikQ2ithkqs0GT9bWBqmuE2QxNC4j4Nn7puDKJli7fV+9
+        GzbGzNY9O6m69uES7BX8L5sA4qp7BRaUZXsrVftP16wkPHklwUViSe3DqXgukZeM9vcK0Ss8R3B9MUQr
+        G2A7Gdngaf5cL/7OByjrRF+OV3S9+DHGZQQ8JdMUnM96tiojrNtpTZV+c5VUj70C5eGSk+peAe4cdhD3
+        GcQjaZw1ymsNo/UgyvFHRHEoVhpcX5Sd1c4G/dgsuNXM2QCPrHFBiaeRZPFj2oYRnFqZETbvsaJi/zVU
+        4v8Dz/cQFtV/XzYB9gqwF3CHWELWBMyhKi4kK8RqAoVk3QOq+aghOHNo6gtNNihzG6CVDXCrWckGXGtE
+        BztJY6dgXEbA7+k1iYhI+mHzLlq9da/Rs2qrFR2320olAb9QSdAGZr2Yx8WjZUc0S8D8Y4/S+aBFnA3w
+        bKKy1SyeSFLvK7Bp7HuKjCJ+qUVkg8FsFGSDt7WyQW/+rp6U5D6b4xRRP251tA0joOApLCwSv7Bh/BRS
+        UcQBKglcTyXBv1JpyGYqDdtCBWc+ECbIsrmZLoQsoxr84or4nQXlFrTe3UesDsRykqeMumzwH2WloDx4
+        wtkg07E/XyjR0rhpYVxGwLNyV4NkgEZHGFMaiGywkUpCfqPS0C1UGr6NSiN2UXHAIroQNJ/Oi19jm1n3
+        u4x69xWQ/kWmwAaT+3AlGyi3mrUeQ8s92ZdCw6OksdLDuIyAX99u64SFBlMpTwclwZvYBL9zNoAJdlBZ
+        5G4qi7aicqYmaIHmgRQfzfyvua+geRQNG01VvpNENhArDjZJGWcL1BpYTdQ9hvYQhQd7S89BgskILU14
+        aACVYkoQJthaZ4KovVQWY03lsQepPN6GKtkMFbwawJJRs9v4BtcGz4g7k5VYdoraANngv3rZ4HkqPPEY
+        xXlv4OOF1Tu+AYzLCPhFi7ZORIifUhewCcK3swl2KSbYxyY4QOVxtlSeYEcVifZUEbWJr3bOBuK+wisi
+        C2iywVhNAYmbU64DecmIW83IBprH0NLOjKbg0Ajp8Q1gXEbA3/tpKhHhYUZFOM+9svOMC3ZR6gI2QcRO
+        NsEenhJggv1sAhvFBEeoIvkYVaSc5H8f4JT/JheHQ3kVMZWzwQRlpaBkAxfcasZjaK+KbJBz+m0KDgmX
+        HvsytA0juHv58NJM/iTw9QL7GvXNEEJZITZKXcAmUOqCshiYAFPCIY0JkjgbpJygylQHqkw/LagOWSJ2
+        GNVsoLkVzbWBeAytLhuEBrrrHbNBGJcR8IefmsKpM65Gt6GE31AK4/lX+zwDg4KpRKc41K4LMCUc1piA
+        s0Fl6kmqTIMJnKgq04WqcryoKnaL2Duoqw04G+D+hOOrVHyqD0V7b+XjBOscs4EYlxECAwOpKTg4G6sR
+        QnTOMygwgMrDt9avC4QJeEpIOspgSuBskHZKmKAyg02Q5UZV2R5UletDVWlHRDYQN6lQGygrhWS3GWy0
+        UJ3jNYK2YQRXDy/6ecteWsNmMAZgSkxVoVyIaZ9nSJAflSMbXLYuUEyQ5sgmOMPZACZwFxmhOu8cVef7
+        M75U5v25ZheRa4Mcp4EU0HQTAOMyQkBAAH7nrtHgNnRUXAIFhUcZCZGUkJQi/s6h9nlGBPvS+YR9bAQr
+        Khd1AZugti6ACY5r6gJhAmc2gatiAk+qzvXVmKAgkGqKQqimNIZNtYyKHJ6jQH9vneM0gbZhBH9/f3Hz
+        ROuJm+sOduxwXtrnuWnTr9T/7Rfptx++ogspXA/ABKgLsFRMPi5WCZq6ACbAlHBWMYE3m8BPMUEw1RSH
+        UU1JJJ0vj6cwXo4GBOgepwkYlxEQuLYKUrClpSXddddd1LHjndShQwdavWQcXco5rZkSUBym1q8LhAkw
+        JRQEUE0hTBBK1cURlJkaSgGS4zQR4zKC+neE2yIwwlNPPUVdu3alLl26UKdOnej22++gHt26UnLgPsUE
+        huuCmsIgqiwIoZSEIDp3Tn6Mq8BkhJakc+fO1L17dx0zdOzYkW74503kZr++fl2Q50s1Bf5UmhNAibEB
+        5Ot7Tvq91wDjMsK5c+fY7W0TFxcXYYL777+fevToQffccw9ZWFgIc9x55530r5tvoTj/A7V1wXk2QXGm
+        H0WG+ZEPG0D2ndcQ4zKCj48PtVUOHz5MDz30EPXs2dOgGf5xw41UnHqGCtO8KTjQh7y85d/VDBiXEby9
+        vamtsmPHDurVqxc98sgjOmbo1q2bMAOM0K9fP3J0dCIvL/l3NCNtxwhOZ1zptJHi4uZOc+fOpd69e9Pj
+        jz9Ojz76qMgO9913n2Do0KHiL5oB2dhaAOMygpeXF18NjefEaWexoyfb6jUG1u06QIM+/JCefvppYQZk
+        BqwgJk+eLG4Dy8bUwrQNI9g7ONLa7XIRjIH1bIQ+LHzfvn1F+l+xYoVYTsrGcp0wGaElwL2H/u+/T5s3
+        bxbLNdkYrjNtwwjuXFzhr5at32WcbNx9kHx9vKXnbiS0DSMgzeKvlhUXGSf4/yt4eHhIz91IaBtGAJ6e
+        nkaN7JyNiLZjBBNXhckIJgQmI5gQGJ0R/tY7QRMtwzZFAuNofEIX9U7QRMvQQZGgedu+ffuUf9U1/tk/
+        9LiBl1h9JSdpohnhFU3xli1b9LX4hyJTbeOfKf9qZENHrS++gfmnwo3MTcz/KPyLuYW5zcrKytzd3X2K
+        7IRNXHvYBKXW1tYdEHtFA2ih6gKNoJWqGzRU9VRUNtCUD6GDKja++FbGnLmDuZO5i+nKdGN6MPcxPZnH
+        mN5shj52dnavubq6buATjeUsEaeQoJCkkHw52FAghUlj0pkMhcxWhnreGAPGgjFJx6yHGic1biKOHNM4
+        7u988uTJ4RzrpxBzJfbQAFpAE2gDjaAVNIN20BBaQlPVJMIcivyapvwQH4C7OjH4Inzxw8wTzNPM88y/
+        mbeYd5n+zEBmCDOCGcOMZyYCPtEJDF6nMDOZhcwK5gfmR+YnCfj5z8wa5lf+nu2MFXNQwaaVoZ43xrAd
+        Y1LGhjFeLgaIEWKFmCF2iGFtTPm7AGKNmCP20ABaQBNoA42gFTSDdtAQWkJTaAuNoTU0v0E1ATIB0gnc
+        8yDTl3mD+T9mKDOawUGnMrOZJcxK5idmNbOB2cbsZVSxbBUOMUcYB8aF8WS8GV+FcwbwZ4KZSCaOSWSS
+        FJJbCer54twxBowFY8LYZGMGalwQI8QKMUPsEEPEUo2rajLEHLGHBtACmkAbaAStoBm0g4bQEppCW2gM
+        raE5tP8HjIA5BHMN3niNGcl8yyxnfmG2MnA0TuQEc4ZxZ3CyOPlAJpyJZuIZbdFACpPBZDP5TKFC0WUo
+        ZkqZcqaSqWKqmZpWBs4Z544xYCwYE8YmG7OKGh/ECjFD7BBD7Zgixog1Yo7YQwNoAU2gDTSCVtAM2kFD
+        aAlNoS00htbQHNr/E0ZAeoAznmQGM7OYjcx+Bl/mxsClIUwUk8CkMqq4eUwBg0GUMBhwBYPB64t4QeGi
+        wh+X4U/mL4W/G8ilFkZ2DjLUcWBMsrGqqHFR46RvJoDYIsaINWKO2EMD1TTQBhpBK2gG7aAhtISm0BYa
+        Q2toDu1vghFQOHRkejEfMF8zSDGYn5GCTjJIUXBbABPGwIlwJZyazuAEsphcBiemXtFlCjhxFdUkGNx5
+        RtsYhpAFTZ/GmuZqUY8nOxd9ZGPSBjFALFTBVbFV1DiqGQUxRqwRc8QeGkALaAJtoBG0gmbQDhpCS2gK
+        baExtIbm0P5GtVBERYlq8xkGBcdnzBRmDrOM+ZmBk5BidjMHmKPMKcaRcWJwQA8GKQpzIU4mgsHcqA2c
+        GssgxWEAGAzcnNMEEAykUFwZ6lQC1KunuVCPg2Pi2DgHnIvsHK8Exo4YIBaICWKDGOnHDbFETBFbxBix
+        RswRe2gALaAJtIFG0AqaQTtoCC2hKbSFxtAamkP7G9RiEVkBVaQFg3kDS5MXmdcZVKGoSD9mUKF+zqBq
+        ncagIJnPLGAWMyhU1jCo+HEiKGTgQm12MWiYv44zGISzAua2xuDKoKjyY5AGtY2HYDYH2sLgmDg2zgHn
+        IjvHy6GOGzFALBATNMRIP26IJWKK2CLGiDVijthDA2gBTaANNIJW0AzaQUNoCU2hLTSG1tAc2muWkfgH
+        g8yAChIOuZ3BEgMfhmvuZ7BWfZTBUgRuwpdiiYKiAwd5k/kPo5pmOIOTQWGiYsmMYsYyk5kZzFwGg1nY
+        BFAdf8+sZX5jVOPtaGZUYXBMHBvngHORneOVwNgRA8QCMUFsECPESjt2iCViqoqLWCPmiD00gBbQBNpA
+        I2gFzaAdNISW0BTaQmNoLd1LUMGbQN1YQoebGexe4QvUDSZ8KTYtujA4yN2MtmkeYXAy2mDz43EGGyHP
+        Mi8zrzIYTGPBMgjr5feYD5lhjGo8BLE5UYXBMXFsnAPOBeckO9crgRggFogJYoMYIVb68UNMtcVFzBF7
+        aAAtoIn2BhI0g3bQUHsjCQi9pU37DfWDCsgYatYA6nazNjLTyEA6gitRpHRmMAAMpilgc6Q7g8A8xKhm
+        awlwLBwTx8Y54Fxk59gQEAPEAjFBbBAjWeyATFxt1C1loOpWq6XatP991U37AFqoB9c2jgx1H1x/II2h
+        oeZrLq4kSmNQ4yGLlYp2bOvFvunNzOz/AbkakFzz1NX4AAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="btnCursosPorProfesor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIwAAABKCAYAAABpcbyXAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
